--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,5 @@
-<<<<<<< HEAD
-1111
-2222
-3333
-4444
-aaaaaa
-bbbbbb
-=======
-aaaa
-bbbb
-cccc
-dddd
->>>>>>> db558b03a046862f2de610b5c09fce6455a60888
+dfhjjkllkk
+ghmnhj
+1235467
+t497657ihj
+tgfdsgjd
